# Linkly

./: CMakeLists.txt  Makefile  README.md  chat-auto
.github/workflows/: makefile.yml
src/chat/: arg_parser.cpp  arg_parser.hpp  client.cpp  client.hpp  flags.cpp  flags.hpp  main.cpp  text.cpp  text.hpp
src/chat/message_queue/: message_queue.cpp  message_queue.hpp
src/common/header/: header.hpp
src/common/receive_message/: receive_message.cpp  receive_message.hpp
src/common/safe_read/: safe_read.cpp  safe_read.hpp
src/common/safe_write/: safe_write.cpp  safe_write.hpp
src/common/send_message/: send_message.cpp  send_message.hpp
src/common/signal/: mask.cpp  mask.hpp
src/serveur/: main.cpp  server.cpp  server.hpp
